; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/bluetooth/nimble/blecent/main/extr_peer.c_peer_svc_delete.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/bluetooth/nimble/blecent/main/extr_peer.c_peer_svc_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.peer_svc = type { i32 }
%struct.peer_chr = type { i32 }

@next = common dso_local global i32 0, align 4
@peer_svc_pool = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.peer_svc*)* @peer_svc_delete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @peer_svc_delete(%struct.peer_svc* %0) #0 {
  %2 = alloca %struct.peer_svc*, align 8
  %3 = alloca %struct.peer_chr*, align 8
  store %struct.peer_svc* %0, %struct.peer_svc** %2, align 8
  br label %4

4:                                                ; preds = %9, %1
  %5 = load %struct.peer_svc*, %struct.peer_svc** %2, align 8
  %6 = getelementptr inbounds %struct.peer_svc, %struct.peer_svc* %5, i32 0, i32 0
  %7 = call %struct.peer_chr* @SLIST_FIRST(i32* %6)
  store %struct.peer_chr* %7, %struct.peer_chr** %3, align 8
  %8 = icmp ne %struct.peer_chr* %7, null
  br i1 %8, label %9, label %16

9:                                                ; preds = %4
  %10 = load %struct.peer_svc*, %struct.peer_svc** %2, align 8
  %11 = getelementptr inbounds %struct.peer_svc, %struct.peer_svc* %10, i32 0, i32 0
  %12 = load i32, i32* @next, align 4
  %13 = call i32 @SLIST_REMOVE_HEAD(i32* %11, i32 %12)
  %14 = load %struct.peer_chr*, %struct.peer_chr** %3, align 8
  %15 = call i32 @peer_chr_delete(%struct.peer_chr* %14)
  br label %4

16:                                               ; preds = %4
  %17 = load %struct.peer_svc*, %struct.peer_svc** %2, align 8
  %18 = call i32 @os_memblock_put(i32* @peer_svc_pool, %struct.peer_svc* %17)
  ret void
}

declare dso_local %struct.peer_chr* @SLIST_FIRST(i32*) #1

declare dso_local i32 @SLIST_REMOVE_HEAD(i32*, i32) #1

declare dso_local i32 @peer_chr_delete(%struct.peer_chr*) #1

declare dso_local i32 @os_memblock_put(i32*, %struct.peer_svc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
